// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component tests All Post tags 1`] = `
<div
  className="background"
  style={
    {
      "alignItems": "stretch",
      "backgroundImage": "linear-gradient(180deg, rgb(110, 160, 175), rgb(15, 40, 60))",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    style={
      {
        "margin": "2%",
      }
    }
  >
    <Card
      backgroundColor="rgb(90,90,90)"
      title=""
      width="100%"
    >
      <Row
        marginBottom={5}
      >
        <div
          style={
            {
              "color": "white",
              "fontSize": "20px",
              "fontWeight": "bold",
              "marginLeft": "5px",
            }
          }
        >
          <Column>
            Sort by tags:
          </Column>
          <Column>
            <div
              style={
                {
                  "marginLeft": "10px",
                }
              }
            >
              <select
                className="dropdownmenu"
                id="dropdown"
                onChange={[Function]}
                value="popular"
              >
                <option
                  value="1"
                >
                  Solved
                </option>
                <option
                  value="2"
                >
                  JavaScript
                </option>
                <option
                  value="3"
                >
                  Rust
                </option>
                <option
                  value="4"
                >
                  Linux
                </option>
              </select>
            </div>
          </Column>
          <Column
            right={true}
          >
            <div
              style={
                {
                  "marginRight": "5px",
                }
              }
            >
              Posts with this tag: 
              0
            </div>
          </Column>
        </div>
      </Row>
      <Card
        backgroundColor="rgb(70,70,70)"
        marginBottom={-3}
        title=""
        width="100%"
      >
        <Row />
      </Card>
    </Card>
  </div>
</div>
`;

exports[`Component tests All Posts 1`] = `
<div
  style={
    {
      "alignItems": "stretch",
      "backgroundImage": "linear-gradient(180deg, rgb(110, 160, 175), rgb(15, 40, 60))",
      "display": "flex",
      "flexDirection": "column",
    }
  }
>
  <div
    style={
      {
        "margin": "2%",
      }
    }
  >
    <Card
      backgroundColor="rgb(90,90,90)"
      title=""
      width="100%"
    >
      <Row
        marginBottom={5}
      >
        <div
          style={
            {
              "color": "white",
              "fontSize": "20px",
              "fontWeight": "bold",
              "marginLeft": "5px",
            }
          }
        >
          <Column>
            Sort by:
          </Column>
          <Column>
            <div
              style={
                {
                  "marginLeft": "10px",
                }
              }
            >
              <select
                className="dropdownmenu"
                id="dropdown"
                onChange={[Function]}
                value="popular"
              >
                <option
                  value="popular"
                >
                  Popular
                </option>
                <option
                  value="newest"
                >
                  Newest
                </option>
                <option
                  value="unanswered"
                >
                  Unanswered
                </option>
              </select>
            </div>
          </Column>
          <Column
            right={true}
          >
            <ButtonLight
              onClick={[Function]}
            >
              Sort by tags
            </ButtonLight>
          </Column>
        </div>
      </Row>
      <Card
        backgroundColor="rgb(70,70,70)"
        marginBottom={-3}
        title=""
        width="100%"
      >
        <Row />
      </Card>
    </Card>
  </div>
</div>
`;

exports[`widget tests alert 1`] = `<div />`;
